templates/css/styles.css
/* ... */
.ss10 {
    font-feature-settings: 'ss10' 1;
}
.ss11 {
    font-feature-settings: 'ss12' 1;
}
.ss12 {
    font-feature-settings: 'ss12' 1;
}
.ss13 {
    font-feature-settings: 'ss13' 1;
}
.ss14 {
    font-feature-settings: 'ss14' 1;
}
.ss15 {
    font-feature-settings: 'ss15' 1;
}
.ss16 {
    font-feature-settings: 'ss16' 1;
}
.ss17 {
    font-feature-settings: 'ss17' 1;
}
.ss18 {
    font-feature-settings: 'ss18' 1;
}
.ss19 {
    font-feature-settings: 'ss19' 1;
}
.ss20 {
    font-feature-settings: 'ss20' 1;
}

.ss12-ss17 {
    font-feature-settings: 'ss12' 1, 'ss17' 1;
}
.ss12-ss18 {
    font-feature-settings: 'ss12' 1, 'ss18' 1;
}
.ss12-ss19 {
    font-feature-settings: 'ss12' 1, 'ss19' 1;
}
.ss12-ss20 {
    font-feature-settings: 'ss12' 1, 'ss20' 1;
}

/* Header logo */

header .logo { /* Floating left box with logo */
    display: block;
    float: left;
    width: 260px; /* Make distance to familyName */
}
header .familyName { /* Floating left box with current family name */
    display: block;
    float: left;
    font-size: 40px;
    text-align: left;
    padding-top: 5px; 
    transform: translateY(calc(0.105em)); /* shift so baseline hits 50px */
    animation: fadeIn 0.2s ease-out forwards;
}

header .familyName:hover {
    color: #E31C79;
}

header .familyName .andMore {
    animation: fadeIn 0.2s ease-out forwards;
}
header .logo img {
    padding-top: 4px;
    height: 42px;
}
header .smallLogo { /* Text logo for really small screen sizes, no space for image */
    transform: translateY(calc(0.4em)); /* shift so baseline hits 50px */
    display: none;
}
header .smallLogo a { /* Text logo for really small screen sizes, no space for image */
    color: white;
    font-family: "Upgrade Semibold";
    font-size: 38px;
    letter-spacing: 0.25em;
    text-decoration: none;
}
header .smallLogo a:hover { /* Text logo for really small screen sizes, no space for image */
    color: #E0E0E0;
}

/* Header navigation */

header .navbar {
    display: block;
    float: right;
    padding: 4px;
    padding-right: 15px;
    animation: slideLeft 0.4s ease-out forwards;
}
header .navbar ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
}
header .navbar li {
    margin-right: 10px;
}
header .navbar a {
    color: white;
    font-size: 1.2em;
    text-decoration: none;
}
header .navbar a:hover {
    color: #E31C79;
    text-decoration: none;
}

header .navbar .current{
    color: #E31C79;  
}

header .hamburger {
    position: absolute;
    top:0px;
    right:0px;
    font-size: 30px;
    cursor: pointer;
    float: right;
    padding: 20px;
    padding-right: 40px;
    animation: fadeIn 0.7s ease-out forwards;
    z-index: 100000000;
}

header .hamburger:hover{
    color: #E31C79;  
}

h2 a.active {
  color: red; /* actieve linkkleur */
  font-weight: bold; /* optioneel */
}

/* Slideshow */

.slideshow {
    padding-top: 60px;
    width: 100%;
    height: 500px;
    position: relative;
    overflow: hidden;
}

.slide {
    position: absolute;
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    opacity: 0;
    transition: opacity 1s ease-in-out;
    z-index: 0;
}

.slide.active {
    opacity: 1;
    z-index: 1;
}

/* Font selector */

.font-selector {
    padding: 30px;
}
.font-selector a {
    text-decoration: none;
}

/* Image cells */

.titleImage {
    margin-top: 20px; 
    padding-top: 30px;
    width: 100%; 
    height: 400px; 
    background-size: contain;
    background-position: center;
    background-repeat: repeat;
}
.titleImageSmall {
    margin-top: 20px; 
    padding-top: 30px;
    width: 100%; 
    height: 350px; /* Fitting Bitcount animations */
    background-size: contain;
    background-position: center;
    background-repeat: repeat;
}

div.image {
    width: 98%;
    height: 100%;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    z-index: 0;
    padding: 0;
}

/* Pop-up */
.popup {
  display: none; 
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.6); 
  animation: fadeIn .4s forwards;
  z-index: 10000;
}

.store-modal__container__background {
    animation: fadeIn .5s forwards;
}

.popup-content {
  background-color: #282828;
  margin-top: 70px;
  margin-left:250px;
  padding: 10px;
  padding-right:30px;
  padding-bottom:0px;
  width: 300px;
  max-width: 300px;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  position: relative;
  animation: slideDown .3s forwards;
}

.popup-content .column {
  background-color: #282828;    
}

.popup-content .column a {
  color: white;    
}

.popup-contentp a:link, .popup-contentp a:visited, .popup-contentp a:active {
    text-decoration: none;
    color: #E31C79;  
}
.popup-contentp p a:hover {
    color: #E31C79;  
}

.familyName:hover, .close:hover, .menuBox .close:hover, .navbar a:hover,
.popup-content:hover .column a:hover {
    color: #E31C79;  
}

.close {
  position: absolute;
  top: 10px;
  right: 20px;
  font-size: 30pt;
  font-weight: bold;
  color: white;
  cursor: pointer;
}

.menuBox .close{
  font-size: 30pt;
  color: black;   
  font-weight: regular;
  animation: fadeIn 2.7s ease-out forwards;
}

.row {
  display: flex;
  flex-wrap: wrap;
}

.column {
    flex: 1;
    width: 50%;
    min-width: 300px;
    box-sizing: border-box;
    background-color: #F0F0F0;
}

.topline {
    border-top: 1px solid #202020;
}
.column p {
    margin: 0 40px 0 0;
}

.column14{
    width: 25%;
    min-width: 250px;     
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 15px;
    box-sizing: border-box;
    background-color: #F0F0F0;
}

.column34 {
    flex: 1;
    padding-right: 20px;
    padding-left: 10px;
    box-sizing: border-box;
    background-color: #F0F0F0;
}
/* ... */

